[editor] Prevent wraps in buttons for new elements

--- a/projects/editor/src/app/components/new-ui-element-panel/ui-element-toolbox.component.css
+++ b/projects/editor/src/app/components/new-ui-element-panel/ui-element-toolbox.component.css
@@ -9,6 +9,7 @@
   margin-bottom: 3px;
   width: 100%;
   display: inline-block;
+  padding: 0 0 0 10px;
 }
 
 .mat-expansion-panel-header {
